--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,39 @@ jobs:
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
       - image: cimg/openjdk:11.0
+        environment:
+          DB_ROOT_USER: root
+          DB_DRIVER: com.mysql.cj.jdbc.Driver
+          DB_PASS: ""
+          DB_URL: jdbc:mysql://localhost:3306/ecommerce_api
+      - image: circleci/mysql:8.0.2
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: ''
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       # Checkout the code as the first step.
       - checkout
+      - run:
+          name: Wait for Database connection
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      # Install mysql client
+      - run: sudo apt-get install mysql-client
+      # Create database
+      - run:  mysql -h 127.0.0.1 -u root -e "create database ecommerce_api"
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+            - run: mvn dependency:go-offline
+            - save_cache:
+                paths:
+                  - ~/.m2
+                key: v1-dependencies-{{ checksum "pom.xml" }}
+                # run tests!
+            - run: mvn integration-test
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
