--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Wait for Database connection
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
       # Install mysql client
-      - run: sudo apt-get install mysql-client
+      - run: sudo apt-get install mysql-server
       # Create database
       - run:  mysql -h 127.0.0.1 -u root -e "create database ecommerce_api"
       - restore_cache:
