--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
       # Install mysql client
       - run: sudo apt-get update && sudo apt-get dist-upgrade
-      - run: sudo apt-get install mysql-server
+      - run: sudo apt-get install mysql-client
       # Create database
       - run:  mysql -h 127.0.0.1 -u root -e "create database ecommerce_api"
       - restore_cache:
